<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFormActivity"
    android:background="@color/colorSecondary">

    <include layout="@layout/button_back"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/wallet_size"
        android:layout_height="@dimen/wallet_size"
        android:src="@drawable/wallet2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/linear_layout_margin_top"
        android:paddingTop="@dimen/linear_layout_paddin_top"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            style="@style/TextStyle_Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_form_title"
            android:gravity="center_horizontal"
            android:paddingBottom="16dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_profile_form_til_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_person"
            app:boxBackgroundColor="@color/white"
            app:errorIconDrawable="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_profile_form_et_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="10"
                android:hint="@string/fname"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_profile_form_til_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@drawable/ic_people"
            app:errorIconDrawable="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_profile_form_et_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/lname"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_signup_til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@drawable/ic_email"
            app:errorIconDrawable="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_profile_form_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/activity_profile_form_btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_continue"
            android:layout_marginTop="16dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>