<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ForgotPasswordActivity"
    android:background="@color/colorSecondary">

    <include layout="@layout/button_back"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/wallet_size"
        android:layout_height="@dimen/wallet_size"
        android:src="@drawable/wallet2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/linear_layout_margin_top"
        android:paddingTop="@dimen/linear_layout_paddin_top"
        android:background="@drawable/layout_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            style="@style/TextStyle_Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"
            android:gravity="center_horizontal"
            />

        <TextView
            style="@style/TextStyle_Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_code_text"
            android:padding="20dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_forgot_password_til_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_phone"
            app:boxBackgroundColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_forgot_password_et_ph_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="10"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/activity_forgot_password_btn_send_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_code"
            android:layout_marginTop="16dp"
            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>