<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.PhoneVerificationActivity"
    android:background="@color/colorSecondary">

    <include layout="@layout/button_back"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/wallet_size"
        android:layout_height="@dimen/wallet_size"
        android:src="@drawable/wallet2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/linear_layout_margin_top"
        android:paddingTop="@dimen/linear_layout_paddin_top"
        android:background="@drawable/layout_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            style="@style/TextStyle_Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_verification"
            android:gravity="center_horizontal"
            />

        <TextView
            style="@style/TextStyle_Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_code"
            android:paddingTop="20dp"
            />

<!--        Ph Number-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <TextView
                style="@style/TextStyle_Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+977"
                android:gravity="center_horizontal"
                android:padding="10dp"
                />
            <TextView
                style="@style/TextStyle_Small"
                android:id="@+id/activity_phone_verification_tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ph_number"
                android:gravity="center_horizontal"
                android:padding="10dp"
                />
        </LinearLayout>


<!--        OTP PIN-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="2"/>

            <EditText
                style="@style/otp_button"
                android:id="@+id/activity_phone_verification_et_otp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_weight="1"
                android:maxLength="1"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight=".5"/>

            <EditText
                style="@style/otp_button"
                android:id="@+id/activity_phone_verification_et_otp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_weight="1"
                android:maxLength="1"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight=".5"/>

            <EditText
                style="@style/otp_button"
                android:id="@+id/activity_phone_verification_et_otp3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_weight="1"
                android:maxLength="1"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight=".5"/>

            <EditText
                style="@style/otp_button"
                android:id="@+id/activity_phone_verification_et_otp4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_weight="1"
                android:maxLength="1"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight=".5"/>

            <EditText
                style="@style/otp_button"
                android:id="@+id/activity_phone_verification_et_otp5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="1"
                android:layout_weight="1"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight=".5"/>

            <EditText
                style="@style/otp_button"
                android:id="@+id/activity_phone_verification_et_otp6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="1"
                android:layout_weight="1"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="2"/>

        </LinearLayout>

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/proceed" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>